"Add heroku, add BotInitializer"

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots</artifactId>
+      <version>4.9</version>
+    </dependency>
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambotsextensions</artifactId>
+      <version>4.9</version>
+    </dependency>
   </dependencies>
     
   <build>
@@ -40,6 +50,28 @@
             <phase>validate</phase>
             <goals>
               <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <version>1.1.1</version>
+        <configuration>
+          <assembleDirectory>target</assembleDirectory>
+            <programs>
+              <program>
+                <mainClass>firstbot.src.main.java.telegrambots.BotInitializer</mainClass>
+                <name>workerBot</name>
+              </program>
+            </programs>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>assemble</goal>
             </goals>
           </execution>
         </executions>
